# phonefsod

./: AUTHORS  README  configure.ac
data/: Makefile.am  etc-phonefsod.conf  phonefsod.conf  phonefsod.init
data/dbus-1/: phonefsod.conf
src/: Makefile.am  phonefsod-dbus-common.h  phonefsod-dbus-phoneuid.c  phonefsod-dbus-phoneuid.h  phonefsod-dbus-usage.c  phonefsod-dbus-usage.h  phonefsod-dbus.c  phonefsod-dbus.h  phonefsod-fso.c  phonefsod-fso.h  phonefsod-globals.h  phonefsod.c
